--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         }
     ],
     "require": {
-    	"php": ">=5.3.0",
-		"illuminate/support": "4.0.x",
-		"illuminate/config": "4.0.x"
+        "php": ">=5.3.0",
+        "illuminate/support": "~4",
+        "illuminate/config": "~4"
     },
     "autoload": {
         "psr-0": {
